<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_banner"
        app:layout_constraintBottom_toTopOf="@+id/iv_bottom_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bottom_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/pic_login_bg_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mid_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/mid_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <android.support.constraint.Guideline
        android:id="@+id/phone_top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <com.yinghai.piaowan.widget.PowerfulEditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:drawableLeft="@mipmap/ic_account"
        android:drawablePadding="10dp"
        android:hint="@string/enter_phone"
        android:inputType="number"
        android:maxLength="11"
        android:textColor="@android:color/black"
        android:textColorHint="@color/md_grey_500_color_code"
        android:textSize="14sp"
        app:funcType="canClear"
        app:layout_constraintBottom_toTopOf="@+id/phone_bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/veritical_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/tv_country_code"
        app:layout_constraintTop_toTopOf="@+id/phone_top_guideline"
        app:leftDrawableHeight="25dp"
        app:leftDrawableWidth="25dp"
        app:rightDrawableHeight="18dp"
        app:rightDrawableWidth="18dp" />

    <TextView
        android:id="@+id/tv_country_code"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_above="@+id/line1"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="+86"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintRight_toLeftOf="@+id/veritical_guideline2"
        app:layout_constraintTop_toTopOf="@+id/phone_top_guideline" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/primaryBlue"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/veritical_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/veritical_guideline2"
        app:layout_constraintTop_toTopOf="@+id/phone_bottom_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/phone_bottom_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <android.support.constraint.Guideline
        android:id="@+id/password_top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <com.yinghai.piaowan.widget.PowerfulEditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:drawableLeft="@mipmap/ic_password"
        android:drawablePadding="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/md_grey_500_color_code"
        android:textSize="14sp"
        app:funcType="canWatchPwd"
        app:layout_constraintBottom_toTopOf="@+id/password_bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/veritical_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/veritical_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/password_top_guideline"
        app:leftDrawableHeight="25dp"
        app:leftDrawableWidth="25dp"
        app:rightDrawableHeight="10dp"
        app:rightDrawableWidth="25dp" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/primaryBlue"
        app:layout_constraintTop_toTopOf="@+id/password_bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/veritical_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/veritical_guideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/password_bottom_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ripple_btn_blue"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_bottom_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/veritical_guideline1"
        app:layout_constraintRight_toLeftOf="@+id/veritical_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btn_top_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/btn_top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.845" />

    <android.support.constraint.Guideline
        android:id="@+id/btn_bottom_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/account_register"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/veritical_guideline1"
        app:layout_constraintTop_toBottomOf="@+id/btn_bottom_guideline" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/forget_password"
        android:textColor="@android:color/black"
        android:textColorHint="@color/md_grey_500_color_code"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/veritical_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/btn_bottom_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/veritical_guideline1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.175" />

    <android.support.constraint.Guideline
        android:id="@+id/veritical_guideline2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.825" />

    <include layout="@layout/include_title"></include>

</android.support.constraint.ConstraintLayout>