<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/include_title"></include>

    <RelativeLayout
        android:id="@+id/rl_wechat"
        android:layout_width="@dimen/x1020"
        android:layout_height="@dimen/y405"
        android:background="@mipmap/pic_item_normal_bg"
        android:paddingRight="@dimen/x80">

        <ImageView
            android:id="@+id/iv_wechat"
            android:layout_width="@dimen/x65"
            android:layout_height="@dimen/x65"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x52"
            android:layout_marginTop="@dimen/x12"
            android:src="@drawable/selector_wechat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_wechat"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/iv_wechat"
            android:text="@string/wechat"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_wechat_has_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_wechat"
            android:layout_alignParentRight="true"
            android:text="@string/account_has_bind"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_wechat_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_right"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_facebook"
        android:layout_width="@dimen/x1020"
        android:layout_height="@dimen/y405"
        android:background="@mipmap/pic_item_normal_bg"
        android:paddingRight="@dimen/x80">

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="@dimen/x65"
            android:layout_height="@dimen/x65"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x52"
            android:layout_marginTop="@dimen/x12"
            android:src="@drawable/selector_facebook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_facebook"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/iv_facebook"
            android:text="@string/facebook"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_facebook_has_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_facebook"
            android:layout_alignParentRight="true"
            android:text="@string/account_has_bind"
            android:visibility="gone"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_facebook_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_right"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_width="@dimen/x1020"
        android:layout_height="@dimen/y405"
        android:background="@mipmap/pic_item_normal_bg"
        android:paddingRight="@dimen/x80">

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="@dimen/x65"
            android:layout_height="@dimen/x65"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x52"
            android:layout_marginTop="@dimen/x12"
            android:src="@drawable/selector_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_phone"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/iv_phone"
            android:text="手機賬號"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_phone_has_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_phone"
            android:layout_alignParentRight="true"
            android:text="@string/account_has_bind"
            android:visibility="gone"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_phone_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_right"
            android:visibility="visible" />
    </RelativeLayout>
</LinearLayout>